syntax="proto3";

package gds.models.v1;
option go_package = "github.com/trisacrypto/directory/pkg/models/v1;models";

import "gds/models/v1/contacts.proto";
import "trisa/gds/models/v1beta1/models.proto";


// GDSExtraData contains all GDS-specific extra data for a VASP record.
message GDSExtraData {
    // Temporary: verification token for light weight authentication for verification
    // TODO: replace with admin API that uses authentication
    string admin_verification_token = 1;

    // Audit log which records events relevant to a VASP
    repeated AuditLogEntry audit_log = 2;

    // Record of all the review notes associated with this VASP
    map<string, ReviewNote> review_notes = 3;

    // Certificate requests associated with this VASP
    repeated string certificate_requests = 4;

    // Certificate IDs associated with this VASP
    repeated string certificates = 5;

    // Log which records emails sent to the TRISA admins regarding this VASP
    repeated EmailLogEntry email_log = 6;
}

// AuditLogEntry contains information about an event relevant to a VASP
// (e.g., verification state changes).
message AuditLogEntry {
    // RFC3339 timestamp
    string timestamp = 1;

    // Previous verification state (handled internally) and current verification state
    trisa.gds.models.v1beta1.VerificationState previous_state = 2;
    trisa.gds.models.v1beta1.VerificationState current_state = 3;

    // Description which can be supplied by the Admin when making a state change
    // (e.g., "resent emails")
    string description = 4;

    // Email address of the Admin who made the state change, "automated" if the state
    // change happened automatically
    string source = 5;
}

// GDSContactExtraData contains all GDS-specific extra data for a Contact record.
// Deprecated: use the Contact model instead
message GDSContactExtraData {
    // Token for email verification
    bool verified = 1;
    string token = 2;

    // Email audit log
    repeated EmailLogEntry email_log = 3;
}

message ReviewNote {
    // Unique identifier of the note
    string id = 1;

    // RFC3339 timestamps representing when the note was created, modified
    string created = 2;
    string modified = 3;

    // Email address of the author and the last editor
    string author = 4;
    string editor = 5;

    // Actual text in the note
    string text = 6;
}